[package]
name = "createMetadata"
version = "0.1.0"
authors = ["daniel-kung <dannielkung@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-client = "1.7.11"
solana-program = "1.7.11"
solana-sdk = "1.7.11"
bincode = "1.3.2"
borsh = "0.9.1"
clap = "2.33.3"
solana-clap-utils = "1.6"
solana-cli-config = "1.6"
spl-token = { version="3.1.1", features = [ "no-entrypoint" ] }
metaplex-token-metadata = "0.0.1"
dotenv = "0.15.0"
spl-associated-token-account = "1.0.3"